# laminar

./: CMakeLists.txt  README.md  UserManual.md  docker-build-centos.sh  docker-build-debian.sh  docker-build-ubuntu.sh  docker-build.sh  docker-xbuild-debian-armhf.sh  laminar.conf  laminar.service  laminarc-completion.bash  laminarc-completion.zsh
debian/: laminarc.1  laminarc.manpages  laminard.8  laminard.manpages
docker/: Dockerfile
etc/: laminar.conf  laminar.service  laminar.service.in  laminarc.1  laminard.8
example-scripts/: format-test-results  junit-bs-style.xsl
examples/: docker-advanced  docker-advanced.sh  format-test-results  git-post-receive-hook-notes  nginx-ssl-reverse-proxy.conf  notify-email-pretty  notify-email-text-log.sh  notify-telegram.sh  plot-build-time-dist
pkg/: centos7-x86_64.sh  centos8-x86_64.sh  debian10-amd64.sh  debian10-armhf.sh  debian11-amd64.sh  debian11-armhf.sh  debian12-amd64.sh  debian13-amd64.sh  debian14-amd64.sh  debian9-amd64.sh  debian9-armhf.sh  opensuse-leap15.6-x86_64.sh  rocky8-x86_64.sh  ubuntu2204-amd64.sh  ubuntu2404-amd64.sh
src/: client.cpp  conf.cpp  conf.h  context.h  database.cpp  database.h  http.cpp  http.h  interface.h  json.cpp  json.h  laminar.capnp  laminar.cpp  laminar.h  leader.cpp  leader.h  log.h  main.cpp  monitorscope.h  node.cpp  node.h  resources.cpp  resources.h  rpc.cpp  rpc.h  run.cpp  run.h  server.cpp  server.h  version.cpp
src/resources/: index.html  manifest.webmanifest  style.css
src/resources/css/: app.css
src/resources/js/: app.js
src/resources/tpl/: browse.html  home.html  job.html  log.html  run.html
test/: eventsource.h  laminar-fixture.h  laminar-functional.cpp  main.cpp  tempdir.h  test-database.cpp  test-laminar.cpp  test-run.cpp  test-server.cpp  unit-conf.cpp  unit-database.cpp  unit-run.cpp
